[package]
name = "portfwd"
version = "0.1.0"
authors = ["hvqzao <hvqzao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["macros", "signal", "io-util", "rt-multi-thread", "net"]}